--- a/src/style.scss
+++ b/src/style.scss
@@ -43,7 +43,7 @@ body {
   max-width: 1960px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 20px;
+  // padding: 0 20px;
   text-align: center;
 }
 
